# rust-python-ffi-example

./: Cargo.toml  LICENSE  test.py
src/: lib.rs
